# collectd-rabbitmq-monitoring

./: .gitignore  README.rst  sample-collectd.conf  setup.cfg  setup.py
collectd_rabbitmq_monitoring/: __init__.py
